# SFML-chase-chase

./: CMakeLists.txt  README.md
source/: AnimationComponent.cpp  AnimationComponent.h  Background.h  Boss.h  Button.cpp  Button.h  Character.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  HitBoxComponent.cpp  HitBoxComponent.h  LeaderBoard.h  MainMenuState.cpp  MainMenuState.h  Menu.h  MovementComponent.cpp  MovementComponent.h  Obstacle.h  OurMusic.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  RequiredHeaders.h  State.cpp  State.h  main.cpp  records.txt
